--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - DB_PASSWORD=Admin123!
       - DB_NAME=fullcontrol
       - DB_PORT=3307
-      - SERVER_URL=http://localhost:3000
+      - SERVER_URL=http://192.168.1.26:3000
     volumes:
       # Persistir uploads fuera del contenedor
       - ./uploads:/app/uploads
